# game_cheetah

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build_arch.sh  index.html  justfile  publish_aur.sh
.cargo/: config.toml
.github/workflows/: build.yml  linux_build.yml  mac_build.yml  main.yml  osx_build.yml  run_tests.yml  rust.yml  windows_build.yml
benches/: search_regions.rs  search_scan.rs
i18n/de/: game_cheetah.ftl
i18n/en/: game_cheetah.ftl
src/: about_dialog.rs  app.rs  cheat_table.rs  lib.rs  main.rs  search_context.rs  search_type.rs  search_value.rs  state.rs
src/state/: diagnostics.rs  memory_reader.rs  mod.rs  simd.rs  string_search.rs  unknown.rs
src/ui/: app.rs  in_process_view.rs  main_window.rs  memory_editor.rs  message.rs  mod.rs  process_selection.rs
test/: test.c
tests/: search_tests.rs  ui_tests.rs  unknown_search_tests.rs
tools/: get_app_img.py  get_name.py  prep_diz.py
