[package]
name = "game_cheetah"
version = "0.3.2"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
edition = "2021"
rust-version = "1.60"
description = "An in memory trainer for games."

[package.metadata.bundle]
name = "GameCheetah"
identifier = "com.github.game_cheetah"
icon = [ "assets/128x128.png", "assets/128x128@2x.png"]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
short_description = "An in memory trainer for games."
long_description = """
Allows to alter values in computer games or freeze them to certain values.
"""

[dependencies]
egui = "0.22.0"
egui_extras = "0.22.0"
eframe = { version = "0.22.0", features = ["persistence"] }
process-memory = "0.5.0"
sysinfo = "0.29.2"
needle = "0.1.1"
threadpool = "1.0"
sudo = "0.6.0"
gabi = "0.2.6"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.6.4"
once_cell = "1.16.0"
rust-embed = "6.4.2"

[target.'cfg(target_os = "windows")'.dependencies]
proc-maps = "0.3.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
proc-maps = "0.2.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[profile.release]
strip = "symbols"

[patch.crates-io]
