[package]
name = "game-cheetah"
version = "0.4.4"
authors = ["Mike Krüger <mkrueger@posteo.de>"]
edition = "2024"
rust-version = "1.88"
description = "High-performance memory scanner/editor and game trainer for Linux, Windows, and macOS"
license = "Apache-2.0"
repository = "https://github.com/mkrueger/game_cheetah"

[package.metadata.bundle]
name = "GameCheetah"
identifier = "com.github.game_cheetah"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
short_description = "An in memory trainer for games."
long_description = """
Allows to alter values in computer games or freeze them to certain values.
"""

[dependencies]
iced = "0.13.1"
process-memory = "0.5.0"
sysinfo = "0.36.1"
threadpool = "1.8.1"
sudo = "0.6.0"
gabi = "0.2.6"
i18n-embed = { version = "0.16.0", features = ["fluent-system", "desktop-requester"]} 
i18n-embed-fl = "0.10.0"
once_cell = "1.21.3"
rust-embed = "8.7.2"
boyer-moore-magiclen = "0.2.20"
proc-maps = "0.4.0"
webbrowser = "1.0.5"
rayon = "1.8"
memchr = "2.7"
crossbeam = "0.8.4"
crossbeam-channel = "0.5"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[build-dependencies]
winres = "0.1"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false
rpath = false
overflow-checks = false  # Disable overflow checks in release
debug = false           # Ensure no debug info
debug-assertions = false # Disable debug assertions

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = "symbols"

[profile.release.package.iced]
opt-level = 3

[profile.release.package.rayon]
opt-level = 3

[patch.crates-io]

[package.metadata.deb]
section="Utility"
copyright = "Copyright (c) Mike Krüger 2022-25. All rights reserved."
license-file="build/license.rtf"
assets = [
    ["target/release/game_cheetah", "/usr/bin/", "755"],
    ["build/linux/game_cheetah.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/game_cheetah.png",     "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/game_cheetah.png",     "644"],
]
